website ready for dekstop users

--- a/Angular Frontend/src/app/app-root/app.component.html
+++ b/Angular Frontend/src/app/app-root/app.component.html
@@ -1,4 +1,4 @@
 <section class="app">
-  <app-header *ngIf="showHeader" />
+  <app-header *ngIf="showHeader"  class="header"/>
   <main class="main-app"><router-outlet /></main>
 </section>
