confirm err page ready

--- a/Angular Frontend/src/app/app-root/app.component.scss
+++ b/Angular Frontend/src/app/app-root/app.component.scss
@@ -3,6 +3,9 @@
   grid-template-rows: auto 1fr;
   position: relative;
   padding-top: 44px;
+  &.hide{
+    padding-top: 0;
+  }
   .header {
     position: absolute;
     background-color: white;
