--- a/Angular Frontend/src/app/cmps/search-panel/search-panel.component.scss
+++ b/Angular Frontend/src/app/cmps/search-panel/search-panel.component.scss
@@ -67,14 +67,12 @@
     cursor: pointer;
     border: none;
     border-radius: 6px;
-    background-color: #3100e7;
-    color: whitesmoke;
+    background-color: var(--button-blue-bg);
+    color: var(--button-text-white);
     padding: 5px 10px;
     &:hover {
       text-shadow: 1px 1px 1px black;
-
-      background-color: #270996;
-
+      background-color: var(--button-blue-bg-hover);
     }
   }
 }
