--- a/Angular Frontend/src/styles.scss
+++ b/Angular Frontend/src/styles.scss
@@ -117,7 +117,9 @@ app-root {
   --background-color: #4d9aff;
   --link-color: #0062e2;
   --outline-focus: #0857be;
-  
+  --button-blue-bg: #3100e7;
+  --button-blue-bg-hover: #270996;
+  --button-text-white: whitesmoke;
 }
 a {
   text-decoration: none;
