--- a/Angular Frontend/src/app/pages/auth/request-reset-pass-page/request-reset-pass-page.component.html
+++ b/Angular Frontend/src/app/pages/auth/request-reset-pass-page/request-reset-pass-page.component.html
@@ -1,28 +1,36 @@
-<section>
-    <form
-      [formGroup]="resetFrom"
-      (ngSubmit)="onSubmit()"
-      *ngIf="!sended; else success"
-    >
-      <h1>Reset Your Password!</h1>
-      <p>Please type your email, and we will send you a code to reset your password.</p>
-  
-      <label>
-        <p>Email:</p>
-        <input formControlName="email" />
-        <button type="submit">Submit</button>
-  
-        <p *ngIf="isErr && resetFrom.controls['email'].dirty">
-          {{ resetFrom.value.email ? 'This email is incorrect or not verified.' : 'Email can\'t be empty.' }}
-        </p>
-      </label>
-    </form>
-  
-    <ng-template #success>
-      <h1>Success!</h1>
-      <p>
-        We sent a confirmation message to {{ resetFrom.value.email }}. Please check your inbox.
+<section class="request-reset">
+  <form
+    [formGroup]="resetFrom"
+    (ngSubmit)="onSubmit()"
+    *ngIf="!sended; else success"
+    class="form"
+  >
+    <h1 class="title">Reset Your Password!</h1>
+    <p class="text">
+      Please type your email, and we will send you a code to reset your
+      password.
+    </p>
+
+    <label class="label-cover">
+      <p class="label-title">Email:</p>
+      <input formControlName="email" placeholder="Email" class="input" />
+      <button type="submit" class="btn">Submit</button>
+
+      <p *ngIf="isErr && resetFrom.controls['email'].dirty">
+        {{
+          resetFrom.value.email
+            ? "This email is incorrect or not verified."
+            : "Email can't be empty."
+        }}
       </p>
-    </ng-template>
-  </section>
-  
+    </label>
+  </form>
+
+  <ng-template #success>
+    <h1>Success!</h1>
+    <p>
+      We sent a confirmation message to {{ resetFrom.value.email }}. Please
+      check your inbox.
+    </p>
+  </ng-template>
+</section>
