--- a/Angular Frontend/src/app/pages/auth/login-page/login-page.component.scss
+++ b/Angular Frontend/src/app/pages/auth/login-page/login-page.component.scss
@@ -35,7 +35,6 @@
       border: 1px solid rgba(61, 68, 77, 0.7);
       .label,
       .password-label {
-        margin-bottom: 8px;
         font-size: 14px;
         font-weight: 400;
         line-height: 21px;
@@ -46,10 +45,11 @@
       }
       input {
         width: 254px;
-        margin-bottom: 16px;
+        margin-bottom: 10px;
       }
-      input + p {
-        margin-bottom: 0;
+
+      .alert {
+        margin-top: -5px;
       }
       .btn {
         background-color: var(--button-green-bg);
