--- a/Angular Frontend/src/app/pages/auth/reset-pass-page/reset-pass-page.component.scss
+++ b/Angular Frontend/src/app/pages/auth/reset-pass-page/reset-pass-page.component.scss
@@ -23,8 +23,8 @@
       margin-bottom: 10px;
       width: 100%;
     }
-    .alert{
-        margin-top: -5px;
+    .alert {
+      margin-top: -5px;
     }
     .btn {
       display: block;
@@ -36,6 +36,33 @@
       background-color: var(--button-green-bg);
       color: var(--button-text-white);
       text-shadow: 1px 1px 1px black;
+      &:hover {
+        background-color: var(--button-green-bg-hover);
+      }
+    }
+  }
+  .cover {
+    border: 1px solid rgba(61, 68, 77, 0.7);
+    border-radius: 6px;
+    padding: 20px;
+    margin-top: 20vh;
+    .title {
+      font-size: 2rem;
+      font-weight: 600;
+      margin-bottom: 2px;
+    }
+    .text {
+      margin-bottom: 10px;
+    }
+    .btn {
+      width: 100%;
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 20px;
+      padding: 10px 20px;
+      background-color: var(--button-green-bg);
+      color: var(--button-text-white);
+      border-radius: 6px;
       &:hover {
         background-color: var(--button-green-bg-hover);
       }
