search for mobile

--- a/Angular Frontend/src/app/cmps/books-components/books/books.component.scss
+++ b/Angular Frontend/src/app/cmps/books-components/books/books.component.scss
@@ -9,3 +9,12 @@
     gap: 40px;
   }
 }
+
+@media (max-width: 800px) {
+  .books {
+    margin-bottom: 100px;
+    .list {
+      grid-template-columns: repeat(2, minmax(100px, 150px));
+    }
+  }
+}
