--- a/Angular Frontend/src/app/cmps/header/header.component.scss
+++ b/Angular Frontend/src/app/cmps/header/header.component.scss
@@ -29,3 +29,20 @@
     }
   }
 }
+
+
+@media (max-width: 1100px) {
+  .header-main{
+    min-width: 200px;
+    padding-right: 20px;
+  }
+
+}
+@media (max-width: 450px) {
+  .header-main{
+    min-width: 50px;
+    padding-right: 20px;
+  }
+
+
+}
