--- a/Angular Frontend/src/app/pagination/pagination.component.scss
+++ b/Angular Frontend/src/app/pagination/pagination.component.scss
@@ -5,3 +5,39 @@
   transform: translateX(-50%);
   min-width: 500px;
 }
+@media (max-width: 800px) {
+  ::ng-deep {
+    .ngx-pagination {
+      display: flex;
+      justify-self: center;
+      gap: 10px;
+      li:not(.pagination-previous, .pagination-next) {
+        display: none !important;
+      }
+      li {
+        background-color: var(--button-blue-bg) !important;
+        border-radius: 6px !important;
+        box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+        rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+        rgba(255, 255, 255, 0.199) 0px 1px 0px inset;
+        * {
+          color: var(--button-text-white) !important;
+          text-decoration-color: var(--button-text-white) !important;
+        }
+        &:hover {
+          background-color: var(--button-blue-bg-hover) !important;
+          a{
+            background: none;
+          }
+        }
+        &.disabled {
+          background-color: rgb(66, 61, 85) !important;
+          * {
+            color: var(--button-text-white) !important;
+            text-decoration-color: rgb(26, 26, 26) !important;
+          }
+        }
+      }
+    }
+  }
+}
