--- a/Angular Frontend/src/app/pages/book-details/book-details.component.scss
+++ b/Angular Frontend/src/app/pages/book-details/book-details.component.scss
@@ -1,5 +1,5 @@
 .book-preview {
-  padding: 0 30vw;
+  padding: 0 200px;
   background-color: rgb(7, 44, 99);
   min-height: 100%;
   .bg {
@@ -7,64 +7,80 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     border-top: 1px solid rgb(126, 126, 126);
     min-height: 100%;
-}
-.book-header {
+  }
+  .book-header {
     display: flex;
     gap: 10px;
     padding: 10px;
-    box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 1px 10px 1px rgba(253, 147, 147, 0.3);
     margin-bottom: 10px;
     .cover {
-        max-width: 130px;
-        max-height: 180px;
-        background-size: cover;
-        padding: 10px;
-        object-fit: cover;
-        aspect-ratio: 2/3;
+      max-width: 130px;
+      max-height: 180px;
+      background-size: cover;
+      padding: 10px;
+      object-fit: cover;
+      aspect-ratio: 2/3;
     }
     .details {
-        padding-top: 10px;
-        .book-title {
-            font-size: 2rem;
-            font-weight: 600;
-            margin-bottom: 30px;
+      padding-top: 10px;
+      .book-title {
+        font-size: 2rem;
+        font-weight: 600;
+        margin-bottom: 30px;
+      }
+      .info {
+        display: flex;
+        gap: 10px;
+        font-size: 1.125rem;
+        margin-bottom: 5px;
+      }
+      .btns {
+        display: flex;
+        align-items: center;
+        .read {
+          padding: 5px 25px;
+          border-radius: 6px;
+          margin-right: 10px;
+          font-size: 16px;
+          line-height: 20px;
+          font-weight: 400;
+          color: whitesmoke;
+          background-color: rgb(18, 56, 112);
+          text-shadow: 1px 1px 1px black;
+          &:hover {
+            background-color: rgb(25, 69, 136);
+          }
         }
-        .info {
-            display: flex;
-            gap: 10px;
-            font-size: 1.125rem;
-            margin-bottom: 5px;
+        .favorites-btn {
+          cursor: pointer;
+          background: none;
+          border: none;
+          border-radius: 50%;
+          padding: 0;
+          margin: 0;
+          .icon {
+            font-size: 20px;
+            color: red;
+          }
         }
-        .btns {
-            display: flex;
-            align-items: center;
-            .read {
-                padding: 5px 25px;
-                border-radius: 6px;
-                margin-right: 10px;
-                font-size: 16px;
-                line-height: 20px;
-                font-weight: 400;
-                color: whitesmoke;
-                background-color: rgb(18, 56, 112);
-                text-shadow: 1px 1px 1px black;
-                &:hover {
-                    background-color: rgb(25, 69, 136);
-                }
-            }
-            .favorites-btn {
-                cursor: pointer;
-                background: none;
-                border: none;
-                border-radius: 50%;
-                padding: 0;
-                margin: 0;
-                .icon {
-                    font-size: 20px;
-                    color: red;
-                }
-            }
-        }
+      }
+    }
+  }
+}
+
+@media (max-width: 850px) {
+    .book-preview{
+        padding: 0 150px;
     }
 }
+@media (max-width: 750px) {
+    .book-preview{
+        padding: 0 100px;
+    }
+}
+@media (max-width: 550px) {
+    .book-preview{
+        padding: 0;
+    }
 }
