search panel mobile breakpoints

--- a/Angular Frontend/src/app/cmps/search-panel/search-panel.component.scss
+++ b/Angular Frontend/src/app/cmps/search-panel/search-panel.component.scss
@@ -78,3 +78,12 @@
     }
   }
 }
+@media (max-width:400px) {
+  .search{
+    .custom-search{
+      input{
+        width: 100px;
+      }
+    }
+  }
+}
