confirm email  mobile breakpoints

--- a/Angular Frontend/src/app/pages/auth/confirm-email/confirm-email.component.html
+++ b/Angular Frontend/src/app/pages/auth/confirm-email/confirm-email.component.html
@@ -7,7 +7,7 @@
   </section>
   <section class="confirm-section">
     <ng-container>
-      <div *ngIf="showForm; else errorMsg">
+      <div *ngIf="showForm; else errorMsg" class="container">
         <h1 class="title">Confirm Email</h1>
         <form
           [formGroup]="confirmForm"
