--- a/Angular Frontend/src/app/cmps/header/header.component.html
+++ b/Angular Frontend/src/app/cmps/header/header.component.html
@@ -2,7 +2,7 @@
   <main class="header-main">
     <a routerLink="" class="logo">
       <mat-icon svgIcon="logo"></mat-icon>
-      <h1>MyBook</h1>
+      <h1>MyBooks</h1>
     </a>
     <nav class="navigation">
       <ul class="list">
