--- a/Angular Frontend/src/app/cmps/search-panel/search-panel.component.scss
+++ b/Angular Frontend/src/app/cmps/search-panel/search-panel.component.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   height: 50px;
   background-color: var(--background-color, red);
+  max-width: 100vw;
   .search-form,
   .search-form > .custom-search {
     display: flex;
@@ -74,14 +75,13 @@
       text-shadow: 1px 1px 1px black;
 
       background-color: #270996;
-
     }
   }
 }
-@media (max-width:550px) {
-  .search{
-    .custom-search{
-      input{
+@media (max-width: 550px) {
+  .search {
+    .custom-search {
+      input {
         width: 100px;
       }
     }
