--- a/Angular Frontend/src/app/pages/profile-page/profile-page.component.scss
+++ b/Angular Frontend/src/app/pages/profile-page/profile-page.component.scss
@@ -70,6 +70,12 @@
 @media (max-width: 550px) {
   .profile {
     .favorite-books {
+      ::ng-deep .books {
+        margin-bottom: 150px;
+        .list {
+          grid-template-columns: repeat(2, minmax(100px, 150px));
+        }
+      }
       .empty-fav {
         .title {
           font-size: 1.5rem;
