testing and debugging

--- a/Angular Frontend/src/app/cmps/books-components/books/books.component.html
+++ b/Angular Frontend/src/app/cmps/books-components/books/books.component.html
@@ -1,5 +1,8 @@
 <section class="books">
-  <ul class="list">
+  <section *ngIf="!books.length">
+
+  </section>
+  <ul class="list" *ngIf="books.length">
     <li class="item" *ngFor="let book of books"><book-preview [book]="book" /></li>
   </ul>
 </section>
